	  support/sdbinutils/binutils/objcopy.c,
	  support/sdbinutils/binutils/budbg.h,
	  support/sdbinutils/binutils/rdcoff.c,
	  support/sdbinutils/binutils/wrstabs.c,
	  support/sdbinutils/binutils/debug.c,
	  support/sdbinutils/binutils/debug.h,
	  support/sdbinutils/binutils/stabs.c,
	  support/sdbinutils/include/ieee.h:
	  added binary target support, added sdobjcopy utility

2012-11-07 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/bfd/Makefile.am,
	  support/sdbinutils/bfd/*.c:
	  removed unused machine an backend files

2012-11-06 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/bfd/targets.c:
	  removed unneeded vectors and flavours
	* support/sdbinutils/bfd/targets.c,
	  support/sdbinutils/bfd/config.bfd:
	  support/sdbinutils/binutils/configure.in,
	  support/sdbinutils/binutils/configure,
	  removed all unused vectors; hardcode default target to asxxxx
	* support/sdbinutils/bfd/configure.in,
	  support/sdbinutils/bfd/configure,
	  support/sdbinutils/bfd/Makefile.in,
	  support/sdbinutils/bfd/archures.c,
	  support/sdbinutils/bfd/Makefile.am,
	  support/sdbinutils/bfd/config.bfd:
	  removed all unused architectures

2012-11-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/sdbinutils/bfd/targets.c: reenable asxxxx

2012-11-05 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/*:
	  sdbinutils synced with binutils-2.23

2012-11-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Fix condition on bc in peephole rule.

2012-11-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20040313-1.c:
	  Disabled test, since it fails on 32-bit Linux.

2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/lib/pic16/startup/crt0i.c,
	  device/lib/pic16/startup/crt0iz.c: Was reduced size of the code.

2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>
